--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Jogging App</string>
+    <string name="navigation_item_start">Start</string>
+    <string name="navigation_item_music">Music</string>
+    <string name="navigation_item_track">Track</string>
 </resources>
