--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="navigation_item_start">Start</string>
     <string name="navigation_item_music">Music</string>
     <string name="navigation_item_track">Track</string>
+    <string name="walking_for">Walking for</string>
+    <string name="jogging_for">Jogging for</string>
 </resources>
